--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack --mode production"
+        "webpack-dev-server": "webpack-dev-server",
+        "prod:build": "webpack --mode production",
+        "dev": "npm run webpack-dev-server -- --mode development --hot"
     },
     "author": "",
     "license": "ISC",
@@ -14,12 +16,16 @@
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-stage-0": "^6.24.1",
+        "copy-webpack-plugin": "^4.5.2",
+        "html-webpack-include-assets-plugin": "^1.0.4",
         "html-webpack-plugin": "^3.2.0",
         "webpack": "^4.16.1",
-        "webpack-cli": "^3.0.8"
+        "webpack-cli": "^3.0.8",
+        "webpack-dev-server": "^3.1.4"
     },
     "dependencies": {
         "babel-polyfill": "^6.26.0",
-        "babel-runtime": "^6.26.0"
+        "babel-runtime": "^6.26.0",
+        "jquery": "^3.3.1"
     }
 }
