--- a/package.json
+++ b/package.json
@@ -5,25 +5,41 @@
     "main": "index.js",
     "scripts": {
         "webpack-dev-server": "webpack-dev-server",
-        "prod:build": "webpack --mode production",
-        "dev": "npm run webpack-dev-server -- --mode development --hot"
+        "prod": "webpack --env.mode production",
+        "dev": "npm run webpack-dev-server -- --env.mode development --hot",
+        "dev:iResponsive": "npm run dev -- --env.skin iResponsive",
+        "prod:iResponsive": "npm run prod -- --env.skin iResponsive"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "autoprefixer": "^9.0.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-stage-0": "^6.24.1",
         "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
+        "file-loader": "^1.1.11",
+        "html-loader": "^0.5.5",
         "html-webpack-include-assets-plugin": "^1.0.4",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.1",
+        "optimize-css-assets-webpack-plugin": "^5.0.0",
+        "postcss": "^7.0.0",
+        "postcss-hexrgba": "^1.0.1",
+        "postcss-loader": "^2.1.6",
+        "precss": "^3.1.2",
+        "style-loader": "^0.21.0",
+        "uglifyjs-webpack-plugin": "^1.2.7",
         "webpack": "^4.16.1",
         "webpack-cli": "^3.0.8",
-        "webpack-dev-server": "^3.1.4"
+        "webpack-dev-server": "^3.1.4",
+        "webpack-merge": "^4.1.3"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "jquery": "^3.3.1"
