--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": ["env", "stage-0"]
+  "presets": [
+    [
+      "env", {
+      "targets": {
+        "browsers": [
+          "last 2 versions",
+          "IE >= 11"
+        ]
+      }
+    }
+    ]
+  ]
 }
