--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
+        "hammerjs": "^2.0.8",
         "jquery": "^3.3.1"
     }
 }
