--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "precss": "^3.1.2",
         "style-loader": "^0.21.0",
         "uglifyjs-webpack-plugin": "^1.2.7",
+        "url-loader": "^1.0.1",
         "webpack": "^4.16.1",
         "webpack-cli": "^3.0.8",
         "webpack-dev-server": "^3.1.4",
@@ -43,6 +44,7 @@
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "hammerjs": "^2.0.8",
-        "jquery": "^3.3.1"
+        "jquery": "^3.3.1",
+        "qs": "^6.5.2"
     }
 }
