--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "webpack-merge": "^4.1.3"
     },
     "dependencies": {
+        "@tensorflow-models/mobilenet": "^0.2.2",
+        "@tensorflow/tfjs": "^0.13.1",
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
